--- a/vc10/SoixanteCircuits_Test.vcxproj.filters
+++ b/vc10/SoixanteCircuits_Test.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="..\src\SoixanteCircuits_TestApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\HandDetector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\HaarHandDetector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
@@ -30,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\Particle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\HaarHandDetector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
